--- a/5. Build a Chrome Extension/03. Style the button and input tag/index.css
+++ b/5. Build a Chrome Extension/03. Style the button and input tag/index.css
@@ -14,9 +14,20 @@ green color -> #5f9341
 
 
 input {
+    padding-left: 10px;
+    padding-right: 10px;
+    outline-color: #5f9341;
+    height: 40px;
+    width: 100%;
+    border: 1px solid #5f9341;
+    margin-bottom: 10px;
     
 }
 
 button {
-    
+    background-color: #5f9341;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    font-weight: bold;
 }
